# IMM

./: CMakeLists.txt
include/: SerializedTypes.h  SmapiControl.h  Utility.h
src/: Entry.java  SerializedTypes.java  SmapiControl.cpp  SmapiControl.java  SmapiResponse.java  Utility.cpp  Utility.java  entry.java  main.cpp  mod.java  settingsFile.java
